falta tratar nulls en listas y tests en mapas